Fix navbar on mobile

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -10,7 +10,7 @@ $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #111 !default;
+$text-color:       #353535 !default;
 $background-color: #fdfdfd !default;
 $brand-color:      #2a7ae2 !default;
 
@@ -21,10 +21,10 @@ $grey-color-dark:  darken($grey-color, 25%) !default;
 $table-text-align: left !default;
 
 // Width of the content area
-$content-width:    860px !default;
+$content-width:    1080px !default;
 
-$on-palm:          600px !default;
-$on-laptop:        800px !default;
+$on-palm:          800px !default;
+$on-laptop:        1000px !default;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
