--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -211,12 +211,13 @@ pre {
  */
 
 .svg-icon {
+    transform: scale(1.2);
     width: 16px;
     height: 16px;
+    margin-left: $spacing-unit * 2.5;
     display: inline-block;
-    fill: #{$grey-color};
-    padding-right: 5px;
-    vertical-align: text-top;
+    fill: #{$text-color};
+    vertical-align: middle;
 }
 
 .social-media-list {
